# src/controllers/review.ts
@@ -1,10 +1,23 @@
 import { RequestWithSession } from '../types/request-with-session';
 import { NextFunction, Response } from 'express';
-import {createReview, findReviews, removeReviewById, updateReviewById} from '../db/queries/review-queries';
-import { doesRestaurantExist } from '../db/queries/restaurant-queries';
+import {
+  createReview,
+  findPopulatedReview,
+  findReviews,
+  removeReviewById,
+  updateReviewById
+} from '../db/queries/review-queries';
+import { doesRestaurantExist, findRestaurantById } from '../db/queries/restaurant-queries';
 import { FoodDudeError } from '../models/food-dude-error';
 import { doesUserExist } from '../db/queries/user-queries';
 import { Review } from '../models/review';
+import { Restaurant } from '../models/restaurant';
+
+const validateRestaurantReviewsNotBlocked = (restaurant: Restaurant) => {
+  if (restaurant.reviewsBlocked) {
+    throw new FoodDudeError('restaurants reviews are blocked', 403);
+  }
+};
 
 export const getReviews = async (
   req: RequestWithSession<any, any, { restaurantId: string; userId: string }>,
@@ -40,10 +53,11 @@ export const addReview = async (
     const restaurantId = req.params.restaurantId;
     const userId = req.session.user._id;
 
-    const restaurantExists = await doesRestaurantExist(restaurantId);
-    if (!restaurantExists) {
+    const restaurant = await findRestaurantById(restaurantId);
+    if (restaurant === null) {
       next(new FoodDudeError(`restaurant with id "${restaurantId}" does not exist`, 404));
     } else {
+      validateRestaurantReviewsNotBlocked(restaurant);
       const reviewData = {
         ...req.body,
         restaurant: restaurantId,
@@ -58,8 +72,14 @@ export const addReview = async (
 };
 
 // TODO: Let only an admin or the owner to execute this
-export const updateReview = async (req: RequestWithSession<Partial<Review>, { id: string }>, res: Response, next: NextFunction) => {
+export const updateReview = async (
+  req: RequestWithSession<Partial<Review>, { id: string }>,
+  res: Response,
+  next: NextFunction
+) => {
   try {
+    const currentReview = await findPopulatedReview(req.params.id);
+    validateRestaurantReviewsNotBlocked(currentReview.restaurant as Restaurant);
     const updatedReview = await updateReviewById(req.params.id, req.body);
     if (updatedReview === null) {
       next(new FoodDudeError(`review with id "${req.params.id}" does not exist`, 404));
@@ -74,6 +94,8 @@ export const updateReview = async (req: RequestWithSession<Partial<Review>, { id
 // TODO: Let only an admin or the owner to execute this
 export const removeReview = async (req: RequestWithSession<any, { id: string }>, res: Response, next: NextFunction) => {
   try {
+    const currentReview = await findPopulatedReview(req.params.id);
+    validateRestaurantReviewsNotBlocked(currentReview.restaurant as Restaurant);
     const removedReview = await removeReviewById(req.params.id);
     if (removedReview === null) {
       next(new FoodDudeError(`review with id "${req.params.id}" does not exist`, 404));
